# LingJian

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: Tauri2深入分析.md  发布与自动更新操作指南.md  日志上报系统设计方案.md  灵鉴日志分析工具设计方案.md
scripts/: generate-latest-json.mjs  inject-changelog.mjs  rewrite-latest-json.mjs  upload-to-cos.py
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analyze.rs  download.rs  export_.rs  issue.rs  mod.rs  reports.rs  secret.rs  settings.rs  storage.rs
src-tauri/src/models/: analyze.rs  log_entry.rs  mod.rs  report.rs
src-tauri/src/services/: analyzer.rs  cache.rs  downloader.rs  exporter.rs  github.rs  mod.rs  paths.rs  secret.rs
src/components/: DataCard.vue  ErrorAggregates.vue  IssueInput.vue  IssueList.vue  LogDetail.vue  LogFilter.vue  LogTable.vue  Onboarding.vue  Timeline.vue  UpdateCard.vue
src/composables/: useAnalysis.ts  useExport.ts  useIssues.ts  useSettings.ts  useUpdater.ts
src/router/: index.ts
src/styles/: theme.css
src/types/: index.ts
src/utils/: format.ts
src/views/: AnalyzeView.vue  HomeView.vue  SettingsView.vue
